# scrap

./: .env.example  .gitattributes  .gitignore  AGENTS.md  Blueprint_Dashboard_Ejecutivo_Alcalde.md  CHECKLIST_OPENCODE.md  DESPLIEGUE.md  Dashboard.txt  Dockerfile  PARCHES_BLOQUE1.md  PLAN_DASHBOARD.txt  PLAN_V2.md  README.md  SCRAPEO_REFERENCE.md  SUPABASE_SCHEMA.md  analyze_facebook.py  analyze_tiktok.py  app.py  branches_report.json  clean_git_credentials.sh  cookies.json  db_query_results.txt  debug_page.py  debug_profile.py  debug_tiktok.py  debug_video.py  generate_analysis.py  generate_pdf.py  idioms_sv_global.json  nixpacks.toml  pyproject.toml  reporte_deep_scraper.txt  reporte_estructura.txt  requirements.txt  run_dashboard.sh  run_panel.sh  scrapeo  scraper_checkpoint.json  scraper_log.txt  scraper_log2.txt  (+17 more)
.streamlit/: config.toml  secrets.toml.example
analytics/: _propuestas.py  cli.py  compute.py  emergent.py  emotion.py  evidence.py  freshness.py  narrative_renderer.py  narrator_claude.py  publish.py  queries.py  report.py  schema_validator.py  sentiment.py  topic.py  zona.py
config/: logging_config.py
dashboard/: _generar_id.py  app.py  app.py.backup  app_bloque1_snippets.py  auth.py  bloque1_narrativas.py  capturas_store.py  config.py  dash_audiencia.py  dash_bloque1.py  dash_bloque2.py  dash_bloque3.py  dash_bloque4.py  dash_emocional.py  dash_fuente.py  dash_honestidad.py  dash_ingesta.py  dash_inteligencia.py  dash_memoria.py  dash_metrics.py  dash_narrativa.py  dash_periodos.py  dash_pulso.py  dash_riesgo.py  dash_temas.py  dash_ui.py  data.js  (+46 more)
(+232 files in other folders)
