[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "panel-santa-ana"
version = "1.0.0"
description = "Panel Santa Ana — Inteligencia Ciudadana"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.32.0",
    "pandas>=2.0.0",
    "sqlalchemy>=2.0.0",
    "markupsafe>=2.1.0",
    "bcrypt>=4.0.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
include = [
    "src*",
    "dashboard*",
    "analytics*",
    "config*",
]
exclude = [
    "tests*",
    "scripts*",
    "data*",
    "outputs*",
]
